# pygreet

./: pyproject.toml
src/greet/: location.py
tests/: test_cli.py  test_greet.py
