[tool.poetry]
name = "greet"
version = "0.1.0"
description = ""
authors = ["Dennis Lew <67657152+lewyingshi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
arrow = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
greet = "greet.location:cli"
